// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-step-data-from-request.util should get all default 1`] = `
{
  "body": {},
  "data": "{}",
  "message": "Internal Server Error",
  "method": "NONE",
  "stack": "",
  "statusCode": 500,
  "tags": [],
  "uid": undefined,
}
`;

exports[`get-step-data-from-request.util should get empty tags if body is array 1`] = `
{
  "body": [
    1,
    2,
    3,
  ],
  "data": "{}",
  "message": "Internal Server Error",
  "method": "NONE",
  "stack": "",
  "statusCode": 500,
  "tags": [],
  "uid": undefined,
}
`;

exports[`get-step-data-from-request.util should get step data with success 1`] = `
{
  "body": {},
  "data": "{}",
  "message": "Error Message",
  "method": "POST",
  "stack": "Error Stack",
  "statusCode": 500,
  "tags": [],
  "uid": undefined,
}
`;

exports[`get-step-data-from-request.util should get step data with success 2`] = `
{
  "body": {
    "email": "some@mail.com",
    "id": "1",
  },
  "data": "{
  "email": "some@mail.com",
  "id": "1"
}",
  "message": "Error Message",
  "method": "POST",
  "stack": "Error Stack",
  "statusCode": 500,
  "tags": [
    "email",
    "id",
  ],
  "uid": "1",
}
`;
